src/objects/loan__API_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Account_ID_Field__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <inlineHelpText>This field will be used to identify Account records in the web service API.</inlineHelpText>
        <label>Account ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Contact_ID_Field__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <inlineHelpText>This field will be used to identify Contact records in the web service API.</inlineHelpText>
        <label>Contact ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Id_Field__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <inlineHelpText>This field will be used to identify Loan Account records in the web service API.</inlineHelpText>
        <label>Loan Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Loan_App_ID_Field__c</fullName>
        <inlineHelpText>This field will be used to identify Loan Application records in the web service API.</inlineHelpText>
        <label>Loan App ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Product_ID_Field__c</fullName>
        <description>This field will be used to identify Loan Product records in the web service API.</description>
        <label>Loan Product ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>API Configuration</label>
</CustomObject>